wire images into fundraiser page

--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
 
     .hero-image {
       width: 100%;
-      background: radial-gradient(circle at top left, #00b87c, #111827);
       border-radius: 12px;
       margin-bottom: 18px;
       position: relative;
       overflow: hidden;
       color: rgba(255, 255, 255, 0.9);
       padding: 16px;
+      background: radial-gradient(circle at top left, #00b87c, #111827);
     }
 
     .hero-layout {
       display: grid;
-      grid-template-columns: 1.2fr 2fr;
+      grid-template-columns: 1.1fr 1.6fr;
       gap: 18px;
       align-items: center;
     }
@@ -140,7 +140,7 @@
     .hero-photo {
       width: 100%;
       height: 100%;
-      max-height: 220px;
+      max-height: 230px;
       object-fit: cover;
       display: block;
     }
@@ -452,13 +452,12 @@
         </div>
       </header>
 
+      <!-- HERO WITH MAIN PHOTO -->
       <div class="hero-image">
         <div class="hero-layout">
           <div class="hero-photo-wrapper">
-            <!-- HERO PHOTO (Photo 1): Overwhelmed, “I can’t work” Alex -->
-            <!-- Replace src with your generated image file for Alex -->
             <img
-              src="alex-hero-overwhelmed.jpg"
+              src="images/alex-hero-overwhelmed.jpg"
               alt="Alex looking dramatically overwhelmed at his desk"
               class="hero-photo"
             >
@@ -466,7 +465,8 @@
           <div class="hero-copy">
             <h2>“I want to work. My body says no.”</h2>
             <p>
-              Alex has been diagnosed with <strong>Ultra-Rare Task Avoidance Myopathy (URTAM)</strong>,
+              Alex has been diagnosed with
+              <strong>Ultra-Rare Task Avoidance Myopathy (URTAM)</strong>,
               a condition so rare it mostly exists in his doctor’s group chat.
             </p>
           </div>
@@ -608,42 +608,37 @@
       <section class="photos">
         <h2 class="story-heading">Meet Alex (in 4 extremely scientific images)</h2>
         <p style="font-size:13px; color:var(--text-muted); margin-bottom:6px;">
-          For full comedic impact, these are “before / during / medical / recovery” shots
-          documenting Alex’s brave battle with URTAM.
+          Before, during, and “under medical supervision” – the full URTAM journey.
         </p>
 
         <div class="photo-grid">
           <figure>
-            <!-- Photo 2: BEFORE URTAM – happy, functional Alex -->
             <img
-              src="alex-before-urtam.jpg"
+              src="images/alex-before-urtam.jpg"
               alt="Alex looking happy and energetic before URTAM"
             >
             <figcaption>Before URTAM: high-energy, fully functional, suspiciously employable Alex.</figcaption>
           </figure>
 
           <figure>
-            <!-- Photo 3: DURING URTAM – couch, laptop ignored -->
             <img
-              src="alex-during-urtam-couch.jpg"
+              src="images/alex-during-urtam-couch.jpg"
               alt="Alex on the couch ignoring his open laptop"
             >
             <figcaption>During URTAM: laptop open, productivity at 0%, snack consumption at 300%.</figcaption>
           </figure>
 
           <figure>
-            <!-- Photo 4: “MEDICAL” shot – doctor visit -->
             <img
-              src="alex-doctor-visit.jpg"
+              src="images/alex-doctor-visit.jpg"
               alt="Alex with a doctor pointing at a ridiculous chart"
             >
-            <figcaption>Scientific evidence: doctor pointing at a very serious chart labeled “Productivity vs. Memes.”</figcaption>
+            <figcaption>Scientific evidence: doctor pointing at a chart labeled “Productivity vs. Memes”.</figcaption>
           </figure>
 
           <figure>
-            <!-- Photo 5: THERAPY / RECOVERY – Alex trying his best -->
             <img
-              src="alex-therapy-progress.jpg"
+              src="images/alex-therapy-progress.jpg"
               alt="Alex slowly attempting to work at a laptop with therapist nearby"
             >
             <figcaption>Recovery phase: Alex bravely keeps a spreadsheet open for more than 12 seconds.</figcaption>
